# grokoquantomachine

./: .gitignore  AGENTS.md  LICENSE  README.md  biome.json  e2b-build.ts  next.config.ts  package.json  pyproject.toml  test_getPrices.py  test_searchNews.py  test_searchPosts.py  tsconfig.json
.cursor/: worktrees.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/actions/: generate-title.ts
app/api/chat/: agent.ts  context.ts  route.ts
app/api/chat/tools/: execute-code.ts
app/api/chat/workDir/: getPrices.py  get_prices.py  searchPosts.py  search_news.py  search_posts.py  testStrategy.py  test_strategy.py  webSearch.py  web_search.py
app/api/functions/searchNews/: route.ts
app/api/functions/searchPosts/: route.ts
app/api/functions/webSearch/: route.ts
app/chat/[chatId]/: page.tsx
components/: app-sidebar.tsx  chat-list-item.tsx  chat-list.tsx  chat-messages.tsx  chat.tsx  code-block.tsx  delete-chat-dialog.tsx  edit-chat-title-form.tsx  prompt-form.tsx  strategy-chart.tsx  tool-parts.tsx
components/ui/: alert-dialog.tsx  collapsible.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
hooks/: use-chat-id.ts
lib/: atoms.ts  env.ts  models.ts  mutations.ts  search-params.ts  types.ts
resources/: gpt_5.1_prompting_guide
